--- a/files/index.html
+++ b/files/index.html
@@ -1,38 +1,19 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>My page</title>
-        <link href="styles.css" rel="stylesheet"/>
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;500;700&display=swap" rel="stylesheet">
-    </head>
-    <body>
-        <nav class="navbar1" id="nav">
-          <h1 class="title">Hi my name is ....</h1>
-          <a href="#"> Home </a>
-         </nav>
-        <section>
-            <figure>
-                <img class="my-image" src="images/download.jfif" alt="my image"/>
-            </figure>
-            <p>
-                Lorem <span>ipsum</span> dolor sit amet consectetur adipisicing elit. Et delectus rem explicabo tempore aut praesentium quaerat ab, magni hic adipisci repellat aperiam labore dolore quis quia asperiores minima iure earum!
-            </p>
-            <a target="_blank" href="https://www.google.com/?&bih=754&biw=1536&rlz=1C1CHZN_enTN947TN947&hl=ar"> vistite ma site </a>
-            <h5>my hobbies</h5>
-            <ol>
-                <li>Football</li>
-                <li>sleep</li>
-            </ol> 
-        </section> 
-
-        <form>
-            <label>name :</label>
-            <input type="text" placeholder="add your name"/>
-        </form>
-        <footer class="footer">
-            <h1>copyright</h1>
-        </footer>
-    </body>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <title>replit</title>
+    <link href="styles.css" rel="stylesheet" type="text/css"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;500;700&display=swap" rel="stylesheet">
+  </head>
+  <body>
+    <section>
+      <img  src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b6/Image_created_with_a_mobile_phone.png/250px-Image_created_with_a_mobile_phone.png" alt="image" class="img-1">
+      <h1 class="tit-img">This is Image</h1>
+      <p class="p-img"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore temporibus sint laboriosam sequi      dignissimos eligendi impedit hic laudantium sit cupiditate corrupti corporis, vitae eos debitis repellendus pariatur ab vel. Numquam.</p>
+    </section>
+  </body>
 </html>
