--- a/files/index.html
+++ b/files/index.html
@@ -10,10 +10,15 @@
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;500;700&display=swap" rel="stylesheet">
   </head>
   <body>
-    <section>
-      <img  src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b6/Image_created_with_a_mobile_phone.png/250px-Image_created_with_a_mobile_phone.png" alt="image" class="img-1">
-      <h1 class="tit-img">This is Image</h1>
-      <p class="p-img"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore temporibus sint laboriosam sequi      dignissimos eligendi impedit hic laudantium sit cupiditate corrupti corporis, vitae eos debitis repellendus pariatur ab vel. Numquam.</p>
-    </section>
+    <nav class="navbar-1">
+      <img src="images/android.png" alt="logo" class="logo"/>
+      <div class="links">
+        <a href="#"> Home </a>
+        <a href="#"> About Us </a>
+        <a href="#"> Projects </a>
+        <a href="#"> Contact Us </a>
+      </div>
+    </nav>
+
   </body>
 </html>
